Review Controller Initial

--- a/nlog.config
+++ b/nlog.config
@@ -14,6 +14,11 @@
 	<targets>
 		<!-- write logs to file  -->
 
+
+		<target xsi:type="File" name="request-time" fileName="d:\MovieAPILogs\request-time.log"
+		layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+		
+		
 		<target xsi:type="File" name="exceptions" fileName="d:\MovieAPILogs\nlog-all-exceptions${shortdate}.log"
 		layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 		
@@ -27,6 +32,7 @@
 	<rules>
 		<!--All logs, including from Microsoft-->
 		<logger name ="MoviesApi.*" minlevel ="Error" writeTo ="exceptions"/>
+		<logger name ="MoviesApi.Middleware.RequestTimeMiddleware" minlevel ="Trace" writeTo ="request-time"/>
 	
 	</rules>
 </nlog>
